# pytorch-cmake-template

./: .gitignore  CMakeLists.txt  README.md  setup.cfg  setup.py
example/: test_run.py
mylib/: __init__.py
mylib/src/: main.cpp
